# WeConduct

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
packaging/nsis/: setup.nsi
packaging/portable/: README_PORTABLE.txt
packaging/pyinstaller/: desktop_shell_runtime_hook.py  weconduct_preview.spec
scripts/: build_bundle.ps1  build_preview_bundle.ps1
src/weconduct/: __init__.py
src/weconduct.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_preview_packaging.py  test_workspace_layout.py
tests/api/: test_api_host.py  test_preferences_api.py  test_ui_static_hosting.py  test_workbench_compile_errors.py  test_workbench_http_api.py
tests/application/: test_compilation_workbench_service.py  test_compile_response_envelope.py  test_preferences_service.py  test_preview_smoke.py  test_project_python_runtime.py  test_update_service.py  test_workbench_snapshot_service.py
tests/cli/: test_compile_command.py  test_convert_webcontrol_command.py  test_desktop_shell_command.py  test_preview_smoke_command.py  test_regression_run_command.py  test_run_project_command.py  test_serve_api_command.py
tests/compiler/: test_graph_workspace_compilation.py  test_legacy_webcontrol_parse.py  test_native_flow_compilation.py  test_pipeline_order.py  test_stable_identity.py
tests/contracts/: test_contract_models.py
tests/desktop_shell/: test_launcher.py  test_preferences_path.py
ui/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/src/: App.vue  main.ts  router.ts
(+107 files in other folders)
