[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weconduct"
version = "0.6.1"
description = "WeConduct Python core"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
  "pywebview>=5.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
packaging = [
  "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
