[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weconduct"
version = "0.7.2"
description = "WeConduct Python core"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
  "playwright>=1.53,<2",
  "pywebview==6.2.1",
  "pythonnet==3.0.5",
  "clr_loader==0.2.10",
  "openpyxl>=3.1.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
packaging = [
  "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
